--- a/youtube/youtube-videos/styles/yt-video_video-information.css
+++ b/youtube/youtube-videos/styles/yt-video_video-information.css
@@ -7,6 +7,7 @@
 /*Video Title*/
 .info-title {
   font-family: 'Roboto';
+  font-size: 1.9rem;
   font-weight: 500;
   width: 100%;
   padding-bottom: 1.2rem;
