--- a/youtube/youtube-videos/styles/yt-video_video-related.css
+++ b/youtube/youtube-videos/styles/yt-video_video-related.css
@@ -1,12 +1,13 @@
 /*Video Related*/
 .main-related {
-  color: white;
-  padding: .5rem 0 2.5rem 2rem;
+  padding: 0 2rem 2.5rem;
 }
 
 /*Video Topics*/
 .related-topics {
-  padding-bottom: 2rem;
+  padding: 1rem 0 2rem;
+  overflow: hidden;
+  position: relative;
   display: flex;
     gap: .8rem;
 }
@@ -18,7 +19,7 @@
   color: white;
   padding: .8rem 1.3rem;
   border: none;
-  border-radius: .5rem;
+  border-radius: .8rem;
   cursor: pointer;
   white-space: nowrap;
   transition: .2s;
@@ -37,6 +38,41 @@
 
 .related-topics_button-all:hover {
   background-color: white;
+}
+
+/*Topics Next*/
+.related-topics_next {
+  font-size: 2.2rem;
+  background-color: var(--black-background);
+  width: 7rem;
+  height: 4rem;
+  box-shadow: -2rem 0 1.5rem 1rem var(--black-background);
+  position: absolute;
+    top: .7rem;
+    right: -3rem;
+  display: flex;
+    align-items: center;
+}
+
+/*Topics Next Figure*/
+.related-topics_next-fig {
+  width: 4rem;
+  height: 4rem;
+  border-radius: 100%;
+  transition: .1s;
+  display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.related-topics_next-fig:hover {
+  background-color: var(--white-20);
+}
+
+/*Topics Next Image*/
+.related-topics_next-img {
+  width: 70%;
+  margin-top: .4rem;
 }
 
 /*Related Videos*/
@@ -155,7 +191,7 @@
   transition: .15s;
   position: absolute;
     top: -.3rem;
-    right: 2.8rem;
+    right: 3.5rem;
 }
 
 .related-videos_video-add:hover .addto-tooltip {
@@ -204,6 +240,10 @@
   width: 71%;
 }
 
+.unseen-chopin {
+  width: 74%;
+}
+
 /*Video Mix Division*/
 .related-videos_video-mix {
   background-color: var(--gray-tooltip);
@@ -217,15 +257,42 @@
     justify-content: center;
 }
 
+/*Video Mix Division Jeremias*/
+.mix-jeremias {
+  background-color: var(--black-70);
+}
+
 /*Video Mix Icon*/
 .related-videos_video-mix__icon {
   height: 95%;
 }
 
+/*Video Playlist Division*/
+.related-videos_video-playlist {
+  font-size: 1.7rem;
+  background-color: var(--black-85);
+  width: 40%;
+  position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+  display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 1rem;
+}
+
+/*Video Playlist Icon*/
+.related-videos_video-playlist__icon {
+  width: 2rem;
+  margin-left: .5rem;
+}
+
 /*Video Related Info*/
 .related-videos_video-info {
   flex: 1;
-  padding-left: .8rem;
+  padding: 0 2rem 0 .8rem;
   position: relative;
   display: flex;
 }
@@ -370,9 +437,10 @@
   font-size: 1.4rem;
   background-color: transparent;
   color: var(--blue-link);
-  padding: .7rem 0;
+  padding: .8rem 0;
   border: .1rem solid var(--gray-tooltip);
   border-radius: 1.8rem;
+  cursor: pointer;
   display: flex;
     align-items: center;
     justify-content: center;
@@ -380,4 +448,72 @@
 
 .related-videos_showmore:hover {
   background-color: rgba(34, 82, 136, 0.4);
+  padding: .9rem 0;
+  border: none;
+}
+
+@media (min-width: 780px) {
+  /*Topics Next*/
+  .related-topics_next {
+    display: none;
+  }
+}
+
+@media (min-width: 1015px) {
+  /*Video Related*/
+  .main-related {
+    width: 32vw;
+    max-width: 42.6rem;
+    height: 28rem;
+    padding: 2.8rem 2rem 0 0;
+  }
+
+  /*Topics Next*/
+  .related-topics_next {
+    display: flex;
+  }
+
+  /*Related Video Channel Name*/
+  .related-videos_video-info__owner-channel {
+    max-width: 11rem;
+  }
+
+  /*Related Video Channel Tooltip*/
+  .channel-tooltip {
+    white-space: normal;
+  }
+
+  /*Related Video Channel Name and Stats*/
+  .related-videos_video-info__owner-channel___name, .related-videos_video-info__owner-stats {
+    max-height: 1.6rem;
+    overflow: hidden;
+  }
+
+  /*Related Mix Channel Name*/
+  .mix-name {
+    max-height: 3.2rem;
+  }
+
+  /*Channel Artist Tooltip*/
+  .artist-tooltip {
+      top: -7.5rem;
+      right: -5rem;
+  }
+
+  /*Mix Channel Tooltip*/
+  .mix-tooltip {
+    top: -8rem;
+  }
+
+  /*Related Videos Show More*/
+  .related-videos_showmore {
+    display: none;
+  }
+}
+
+@media (min-width: 1030px) {
+  /*Related Video Channel Name*/
+  .related-videos_video-info__owner-channel {
+    max-width: none;
+  }
 }
